[tool.poetry]
name = "swagoli"
version = "0.1.0"
description = "Demo project for fastapi."
authors = ["wolorein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
sqlalchemy = "^1.4.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
